--- a/index.html
+++ b/index.html
@@ -537,6 +537,10 @@ html,body{overflow-y:auto;overflow-x:hidden;}
               <div class="muted" style="font-size:12px">Pallets</div>
               <input class="input" id="f_pallets" inputmode="numeric" placeholder="" style="width:100%" />
             </div>
+            <div>
+              <div class="muted" style="font-size:12px">Playos</div>
+              <input class="input" id="f_playos" inputmode="numeric" placeholder="" style="width:100%" />
+            </div>
           </div>
           <div style="height:10px"></div>
           <div style="display:flex;gap:10px;flex-wrap:wrap;">
@@ -1335,6 +1339,7 @@ function ymd(d=new Date()){
       cajas: d.cajas ?? '',
       tarimas: d.tarimas ?? '',
       pallets: (d.pallets ?? d.PALLETS ?? ''),
+      playos_utilizados: (d.playos_utilizados ?? d.PLAYOS_UTILIZADOS ?? ''),
       arribo_at: d.arribo_at ?? '',
       asignacion_at: d.asig_cortina_at ?? '',
       inicio_at: d.inicio_descarga_at ?? '',
@@ -1630,6 +1635,7 @@ async function fetchRows(range){
       ['Descarga en proceso', by('DESCARGA_PROCESO')],
       ['Bloqueos (hold/fumig)', visible.filter(r=>['HOLD_NO_DESCARGAR','FUMIG_PEND','FUMIG_CUARENTENA','ESPERA_CONFRONTA'].includes(r.status)).length],
             ['Concluidos día', conclWork],
+      ['Playos', visible.reduce((a,r)=>a+num0(r.playos_utilizados),0)],
       ['Plantilla', `<span id="kpiPlantillaBoard">${_staffKpiCache.plantilla}</span>`],
       ['Maniobra', `<span id="kpiManiobraBoard">${_staffKpiCache.maniobra}</span>`],
     ];
@@ -1840,12 +1846,22 @@ async function fetchRows(range){
       cajas: payload.cajas ? Number(payload.cajas) : null,
       tarimas: payload.tarimas || null,
       pallets: payload.pallets ? Number(payload.pallets) : null,
+      playos_utilizados: payload.playos_utilizados ? Number(payload.playos_utilizados) : null,
       arribo_at: now.toISOString(),
     };
 
     let ins = await s.from('shipments').insert([row]).select('*').single();
     if(ins.error){
-      const msg = String(ins.error.message||'').toLowerCase();
+      let msg = String(ins.error.message||'').toLowerCase();
+
+      // compat: si la columna playos_utilizados aún no existe (o el schema cache no está actualizado),
+      // reintenta sin playos_utilizados.
+      if(msg.includes('playos_utilizados') && msg.includes('could not find')){
+        const row0 = {...row};
+        delete row0.playos_utilizados;
+        ins = await s.from('shipments').insert([row0]).select('*').single();
+        msg = String(ins.error?.message||'').toLowerCase();
+      }
       // compat: si la columna pallets aún no existe (o el schema cache no está actualizado),
       // intenta guardar en una columna alternativa "PALLETS" (si existe) y si no, reintenta sin pallets.
       if(msg.includes('pallets') && msg.includes('could not find')){
@@ -2470,8 +2486,18 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
     // Compatibilidad: si la BD aún NO tiene la columna pallets (o el schema cache no está actualizado),
     // intenta guardar en una columna alternativa "PALLETS" (si existe) y si no, reintenta sin pallets.
     if(up.error){
-      const msg = String(up.error.message || up.error).toLowerCase();
-      if(msg.includes('pallets') && msg.includes('could not find')){
+      let msg = String(up.error.message || up.error).toLowerCase();
+      // Compatibilidad: si la BD aún NO tiene la columna playos_utilizados (o el schema cache no está actualizado),
+      // reintenta sin playos_utilizados.
+      if(msg.includes('playos_utilizados') && msg.includes('could not find')){
+        delete clean2.playos_utilizados;
+        if(Object.keys(clean2).length === 0){
+          throw new Error('Tu base (Supabase) aún no tiene la columna para PLAYOS UTILIZADOS (playos_utilizados) en la tabla shipments. Agrégala y vuelve a intentar.');
+        }
+        up = await s.from('shipments').update(clean2).eq('id', id);
+        msg = String(up.error?.message || up.error || '').toLowerCase();
+      }
+      if(up.error && msg.includes('pallets') && msg.includes('could not find')){
         const v = clean2.pallets;
         // intento 2: columna alternativa PALLETS
         if(v !== undefined){
@@ -2606,6 +2632,11 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
           <input class="input" id="e_pallets" value="${esc(r.pallets)}" />
         </div>
 
+        <div>
+          <div class="muted" style="font-size:12px">Playos utilizados</div>
+          <input class="input" id="e_playos" value="${esc((r.playos_utilizados ?? ''))}" />
+        </div>
+
         <div style="grid-column:1/-1">
           <div class="muted" style="font-size:12px">Nota (huella)</div>
           <input class="input" id="e_note" placeholder="Ej. Corrección de captura / duplicado / etc" />
@@ -2626,6 +2657,8 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
       const cajas = cajasRaw ? Number(cajasRaw) : null;
       const palletsRaw = (el('e_pallets').value || '').trim();
       const palletsN = palletsRaw ? Number(palletsRaw) : null;
+      const playosRaw = (el('e_playos').value || '').trim();
+      const playosN = playosRaw ? Number(playosRaw) : null;
       const patch = {
         cedis: (el('e_cedis').value || '').trim(),
         cuenta: (el('e_cuenta').value || '').trim(),
@@ -2636,6 +2669,7 @@ document.querySelectorAll('button[data-detail]').forEach(b=>b.addEventListener('
         cajas: (Number.isFinite(cajas) ? cajas : null),
         tarimas: (el('e_tarimas').value || '').trim(),
         pallets: (Number.isFinite(palletsN) ? palletsN : null),
+        playos_utilizados: (Number.isFinite(playosN) ? playosN : null),
       };
       try{
         await updateFieldsCloud(id, patch, note);
@@ -2983,9 +3017,10 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
         cajas: (el('f_cajas').value||'').trim(),
         tarimas: (el('f_tarimas').value||'').trim(),
         pallets: (el('f_pallets').value||'').trim(),
+        playos_utilizados: (el('f_playos').value||'').trim(),
       });
 
-      ['f_contenedor','f_cuenta','f_anden','f_responsable','f_indicacion','f_cajas','f_tarimas','f_pallets'].forEach(id=>el(id).value='');
+      ['f_contenedor','f_cuenta','f_anden','f_responsable','f_indicacion','f_cajas','f_tarimas','f_pallets','f_playos'].forEach(id=>el(id).value='');
       setTab('board');
     }catch(e){
       alert('Error al agregar: ' + (e?.message || e));
@@ -3161,22 +3196,23 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
     // Acumuladores por estatus
     const acc = {};
     statusOrder.forEach(s=>{
-      acc[s.code] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
+      acc[s.code] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0, playos:0};
     });
 
     for(const r of rows){
-      const a = acc[r.status] || (acc[r.status] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0});
+      const a = acc[r.status] || (acc[r.status] = {day:0, prev:0, cajas:0, tarimas:0, pallets:0, playos:0});
       const isDay = (range.start===range.end) ? (r.arribo_ymd === range.start) : (r.arribo_ymd >= range.start && r.arribo_ymd <= range.end);
       if(isDay) a.day += 1; else a.prev += 1;
       a.cajas += num0(r.cajas);
       a.tarimas += num0(r.tarimas);
       a.pallets += num0(r.pallets);
+      a.playos += num0(r.playos_utilizados);
     }
 
     // Columnas visibles: solo estatus con info
     const visible = statusOrder.filter(s=>{
-      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
-      return (a.day + a.prev) > 0 || a.cajas > 0 || a.tarimas > 0 || a.pallets > 0;
+      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0, playos:0};
+      return (a.day + a.prev) > 0 || a.cajas > 0 || a.tarimas > 0 || a.pallets > 0 || a.playos > 0;
     });
 
     const thead = el('theadSummary');
@@ -3202,25 +3238,27 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
     function sumRow(key){
       let total = 0;
       for(const s of visible){
-        const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
+        const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0, playos:0};
         if(key==='day') total += a.day;
         else if(key==='prev') total += a.prev;
         else if(key==='total') total += (a.day + a.prev);
         else if(key==='cajas') total += a.cajas;
         else if(key==='tarimas') total += a.tarimas;
         else if(key==='pallets') total += a.pallets;
+        else if(key==='playos') total += a.playos;
       }
       return total;
     }
 
     function cellVal(s, key){
-      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0};
+      const a = acc[s.code] || {day:0, prev:0, cajas:0, tarimas:0, pallets:0, playos:0};
       if(key==='day') return a.day;
       if(key==='prev') return a.prev;
       if(key==='total') return (a.day + a.prev);
       if(key==='cajas') return a.cajas;
       if(key==='tarimas') return a.tarimas;
       if(key==='pallets') return a.pallets;
+      if(key==='playos') return a.playos;
       return 0;
     }
 
@@ -3231,22 +3269,45 @@ el('dateStart').addEventListener('change', ()=>setWorkRange(el('dateStart').valu
       {key:'cajas', label:'TOTAL CAJAS'},
       {key:'tarimas', label:'TOTAL TARIMAS'},
       {key:'pallets', label:'TOTAL PALLETS'},
+      {key:'playos', label:'TOTAL PLAYOS UTILIZADOS'},
     ];
 
-    tbody.innerHTML = rowsDef.map((rd,i)=>{
-      const grand = sumRow(rd.key);
-      return `
+    tbody.innerHTML = (()=>{
+      let html = '';
+      rowsDef.forEach((rd,i)=>{
+        const grand = sumRow(rd.key);
+        html += `
         <tr class="${i===0 ? 'sumRowTop':''}">
           <td class="mono" style="font-weight:700">${esc(rd.label)}</td>
           ${visible.map(s=>{
             const v = cellVal(s, rd.key);
-            const txt = (rd.key==='cajas' || rd.key==='tarimas' || rd.key==='pallets') ? String(Math.round(v)) : String(v);
+            const txt = (rd.key==='cajas' || rd.key==='tarimas' || rd.key==='pallets' || rd.key==='playos') ? String(Math.round(v)) : String(v);
             return `<td class="mono" style="text-align:center">${esc(txt)}</td>`;
           }).join('')}
           <td class="mono" style="text-align:center;font-weight:800">${esc(String(Math.round(grand)))}</td>
         </tr>
       `;
-    }).join('');
+
+        // Debajo de TOTAL PALLETS
+        if(rd.key==='pallets'){
+          const tp = Number(_staffKpiCache.plantilla || 0);
+          const tm = Number(_staffKpiCache.maniobra || 0);
+          html += `
+        <tr>
+          <td class="mono" style="font-weight:700">TOTAL PLANTILLA</td>
+          ${visible.map(_=>'<td class="mono" style="text-align:center"></td>').join('')}
+          <td class="mono" style="text-align:center;font-weight:800">${esc(String(Math.round(tp)))}</td>
+        </tr>
+        <tr>
+          <td class="mono" style="font-weight:700">TOTAL MANIOBRA</td>
+          ${visible.map(_=>'<td class="mono" style="text-align:center"></td>').join('')}
+          <td class="mono" style="text-align:center;font-weight:800">${esc(String(Math.round(tm)))}</td>
+        </tr>
+      `;
+        }
+      });
+      return html;
+    })();
 
     if(info) info.textContent = `Contenedores visibles: ${rows.length} · Estatus con datos: ${visible.length}`;
   }
@@ -4306,9 +4367,29 @@ function initAttendanceUI(){
       const ro = el('att_man_rodriguez');
       const he = el('att_man_hernandez');
       const zu = el('att_man_zuniga');
-      if(ro) ro.addEventListener('change', _attPersistManeuvers);
-      if(he) he.addEventListener('change', _attPersistManeuvers);
-      if(zu) zu.addEventListener('change', _attPersistManeuvers);
+
+      // Guarda también en input + blur (con debounce) para evitar que se quede en cero si no salen del campo.
+      let manTimer = null;
+      const manDebounced = ()=>{
+        clearTimeout(manTimer);
+        manTimer = setTimeout(_attPersistManeuvers, 300);
+      };
+
+      if(ro){
+        ro.addEventListener('change', _attPersistManeuvers);
+        ro.addEventListener('input', manDebounced);
+        ro.addEventListener('blur', _attPersistManeuvers);
+      }
+      if(he){
+        he.addEventListener('change', _attPersistManeuvers);
+        he.addEventListener('input', manDebounced);
+        he.addEventListener('blur', _attPersistManeuvers);
+      }
+      if(zu){
+        zu.addEventListener('change', _attPersistManeuvers);
+        zu.addEventListener('input', manDebounced);
+        zu.addEventListener('blur', _attPersistManeuvers);
+      }
 
       const toggleRosterBtn = el('att_roster_toggle');
       if(toggleRosterBtn){
